[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
line-length = 150

[tool.pyright]
exclude = [
	"dist/**",
	"build/**",
	"docs/**",
	".tox/**",
]
pythonVersion = "3.7"

[tool.poetry]
name = "rpicontrols"
version = "0.1.0"
description = "Library that eases interacting with physical buttons through the Raspberry Pi GPIO"
authors = ["Cyrille Defranoux"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.7"
"RPi.GPIO" = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.1"
pytest-timeout = "^2.1.0"
