[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
line-length = 150

[tool.pyright]
exclude = [
	"dist/**",
	"build/**",
	"docs/**",
	".tox/**",
]
pythonVersion = "3.7"

[tool.poetry]
name = "rpi-controls"
version = "1.0.3"
description = "Library that eases interacting with physical buttons through the Raspberry Pi GPIO"
authors = ["Cyrille Defranoux"]
maintainers = ["Cyrille Defranoux <cyrille.github@defx.fr>"]
readme = "README.md"
license = "GPL-3.0-or-later"
documentation = "https://rpi-controls.readthedocs.io/en/latest/"
repository = "https://github.com/2franix/rpi-controls"
packages = [
	{ include = "rpicontrols" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/2franix/rpi-controls/issues"

[tool.poetry.dependencies]
python = "^3.7"
"RPi.GPIO" = "^0.7.1"
importlib-metadata = "^4.11.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.1"
pytest-timeout = "^2.1.0"
black = "^22.3.0"
