# This file is part of rpi-controls.
# 
# rpi-controls is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# rpi-controls is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with rpi-controls.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = rpi-controls
version = 1.0.0

[options]
packages = rpicontrols
zip_safe = False # For py.typed
include_package_data = True # To include py.typed files

# Minimal dependencies for the project to work.
install_requires =
	RPi.GPIO

[options.package_data]
* = py.typed

#[options.entry_points]
#console_scripts =
#	rpi_controls_controller = rpicontrols:start_controller

[mypy]
files =	rpicontrols/**/*.py,tests/**/*.py
ignore_missing_imports=true
