# This file is part of rpi-controls.
# 
# rpi-controls is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# rpi-controls is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with rpi-controls.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = rpi-controls
version = attr: rpicontrols.__version__
author = Cyrille Defranoux
author_email = cyrille.github@defx.fr
description = Package easing interacting with physical buttons via the Raspberry Pi's GPIO
long_description= file: README.md
long_description_content_type = text/markdown
url = https://github.com/2franix/rpi-controls
project_urls =
	Documentation = https://2franix.github.io/rpi-controls/
	Bugs = https://github.com/2franix/rpi-controls/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Development Status :: 5 - Production/Stable
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = rpicontrols
zip_safe = False # For py.typed
include_package_data = True # To include py.typed files

# Minimal dependencies for the project to work.
install_requires =
	RPi.GPIO

[options.package_data]
* = py.typed

[mypy]
files =	rpicontrols/**/*.py,tests/**/*.py
ignore_missing_imports=true
